--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 <div class="col-md-4 col-md-offset-4">
 
       <div align="center">
-        <h2>Group :) Demo</h2>
+        <h2>Sign Up Page</h2>
       </div>
 
 <hr>
