--- a/templates/macros.html
+++ b/templates/macros.html
@@ -14,7 +14,7 @@
         {% if (field.type != 'HiddenField' or field.type !='CSRFTokenField') and label_visible %}
             <label for="{{ field.id }}" class="control-label">{{ field.label }}</label>
         {% endif %}
-        {% if field.type in ['TextField', 'StringField', 'EmailField', 'PasswordField']%}
+        {% if field.type in ['TextField', 'StringField', 'EmailField', 'PasswordField', 'IntegerField']%}
             {{ field(class_='form-control', **kwargs) }}
         {% endif %}
         {% if field.errors %}
