Add a simple UPDATE function with raw SQL query

--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -12,6 +12,9 @@
       </div>
 
 <hr>
+<form action="/update" method="get">
+    <button type="submit" style="float: right;">Change personal information</button>
+</form>
 
 </div>
 
