--- a/templates/test.html
+++ b/templates/test.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 <div id="top">
-<div id="top_img">
+<!--<div id="top_img">-->
 <main id="top_main">
-<div id="top_logo"><img src="{{ url_for('static', filename='test.png' ) }}" ></div>
+<!--<div id="top_logo"><img src="{{ url_for('static', filename='test.png' ) }}" ></div>-->
 <div id="top_title"><img id="top_title01" alt=":)" src="{{ url_for('static', filename='smile.jpg' ) }}" >
 <ul id="top_navlist">
 <a class="top_nav" href="signup"><li>Sign Up</li></a>
@@ -43,7 +43,7 @@
 </span>
 </footer>
 </div>
-</div>
+<!--</div>-->
 
 
 </body></html>
