--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% import 'macros.html' as macros %} 
+{% extends "base.html" %} {% import 'macros.html' as macros %}
 {% block content %}
 
 <div class="col-md-4 col-md-offset-4">
@@ -8,29 +8,28 @@
       </div>
 
 <hr>
-
 <form method="post" action="/index"  id="db_post" name="db_post">
 
-    {{ form1.hidden_tag() }} 
-    
+    {{ form1.hidden_tag() }}
+
     {{ macros.render_field(form1.dbNotes, placeholder='Enter text to submit to the DB', type='dbNotes', label_visible=false) }}
-    
+
     <div align="center"><button type="submit" class="btn btn-primary">Submit</button></p></div>
 
-</form>   
+</form>
 
 <hr>
-
 <form method="post" action="/index"  id="db_post" name="db_view">
 
-    {{ form2.hidden_tag() }} 
-    
-    {{ macros.render_field(form2.numRetrieve, placeholder='Retrieve last N DB entries (enter 1-9)', type='numRetrieve', label_visible=false) }}
-    
+    {{ form2.hidden_tag() }}
+
+    {{ macros.render_field(form2.CRN, placeholder='Retrieve last N DB entries (enter 1-9)', label_visible=false) }}
+
     <div align="center"><button type="submit" class="btn btn-primary">Retrieve</button></p></div>
 
-</form>   
+</form>
+
 
 </div>
 
-{% endblock %}  
+{% endblock %}
