Add student registration and check registered courses use cases, need dalaos to play around

--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -17,18 +17,23 @@
     <button type="submit" class="btn btn-primary">Change personal information</button></p></div>
 </form>
 
+
 <hr>
 
 <form method="post" action="/dashboard/student" id="db_post" name="db_view">
 
     {{ form2.hidden_tag() }}
-
     {{ macros.render_field(form2.CRN, placeholder='Enter the CRN of course to register', label_visible=false) }}
 
     <div align="center"><button type="submit" class="btn btn-primary">Search</button></p></div>
 
 </form>
 
+<form method="get" action="/dashboard/student/courses" id="db_post" name="db_view">
+
+    <div align="center"><button type="submit" class="btn btn-primary">Registered Courses</button></p></div>
+
+</form>
 </div>
 
 {% endblock %}
