--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,48 @@
-<html>
-  <head>
-    <title>Group :) Demo</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Abel|Open+Sans:400,600" rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
+<html lang="en">
 
-    {% block content %} {% endblock %}
+  <head>
+
+    <!-- meta -->
+    <title>Peer Learning</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <!-- css -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/styles/index.css">
+
+    <!-- js -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
+  </head>
+
+  <body>
     
+    <!-- container -->
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+      <!-- header -->
+      <header class="masthead mb-auto">
+          <div class="inner">
+            <h3 class="masthead-brand">Peer Learning</h3>
+            <nav class="nav nav-masthead justify-content-center">
+              <a class="nav-link active" href="index">Home</a>
+              <a class="nav-link" href="#">About</a>
+            </nav>
+          </div>
+        </header>
+
+      {% block content %} {% endblock %}
+    
+      <!-- footer -->
+      <footer class="mastfoot mt-auto">
+          <div class="inner">
+            <p>Copyright © 2019 by Team SmileyFace @ Illinois CS411</p>
+          </div>
+        </footer>
+
+    </div>
   </body>
-</html>  
+</html>
