--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,18 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
 {% block content %}
 
-<div class="col-md-4 col-md-offset-4">
-
-      <div align="center">
-        <h2>Group :) Demo</h2>
-      </div>
-
-<hr>
-<form method="post" action="/index"  id="db_post" name="db_post">
-
-    {{ form1.hidden_tag() }}
-
-    {{ macros.render_field(form1.dbNotes, placeholder='Enter text to submit to the DB', type='dbNotes', label_visible=false) }}
-
-    <div align="center"><button type="submit" class="btn btn-primary">Submit</button></p></div>
-
-</form>
-
-<hr>
-<form method="post" action="/index"  id="db_post" name="db_view">
-
-    {{ form2.hidden_tag() }}
-
-    {{ macros.render_field(form2.CRN, placeholder='Retrieve last N DB entries (enter 1-9)', label_visible=false) }}
-
-    <div align="center"><button type="submit" class="btn btn-primary">Retrieve</button></p></div>
-
-</form>
-
-
-</div>
+<main role="main" class="inner cover">
+  <h1 class="cover-heading">Getting involved in class.</h1>
+  <p class="lead">Peer Learning is a web application that allows students to pair up with other users in the same class and collaboratively tackle problems posted by the instructor.</p>
+  <div class="row top-buffer"></div>
+  <p class="lead">
+    <a href="signup" class="btn btn-lg btn-secondary">Sign Up</a>
+  </p>
+  <p class="lead">
+        <small> 
+            Already have an account? <a href="login">Log in</a> here.
+            </small>
+      </p>
+</main>
 
 {% endblock %}
