--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,27 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
 {% block content %}
 
-<div class="col-md-4 col-md-offset-4">
+<main role="main" class="inner cover">
+    <h1 class="cover-heading">Log In</h1>
+    <hr>
+    
+    <form>
 
-      <div align="center">
-        <h2>Log In Page</h2>
+      <div class="form-group">
+        <label for="emailInput">Your Email Address</label>
+        <input type="email" class="form-control" id="emailInput" placeholder="example@illinois.edu">
       </div>
 
-<hr>
+      <div class="form-group">
+        <label for="passwordInput">Password</label>
+        <input type="password" class="form-control" id="passwordInput" placeholder="Your password here">
+      </div>
 
-<form method="post" action="/login"  id="db_post" name="db_post">
+      <hr>
 
-    {{ form.hidden_tag() }}
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
 
-    {{ macros.render_field(form.email, placeholder='abc@illinois.edu', type='email', label_visible=true) }}
-    {{ macros.render_field(form.password, type='password', label_visible=true) }}
-
-    <div align="center"><button type="submit" class="btn btn-primary">Log In</button></p></div>
-
-</form>
-
-</div>
+  </main>
 
 {% endblock %}
