--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
 {% block content %}
 
-<div class="col-md-4 col-md-offset-4">
+<!-- <div class="col-md-4 col-md-offset-4">
 
       <div align="center">
         <h2>Sign Up Page</h2>
@@ -22,6 +22,38 @@
 
 </form>
 
-</div>
+</div> -->
+
+<main role="main" class="inner cover">
+    <h1 class="cover-heading">Sign Up</h1>
+    <hr>
+    
+    <form>
+
+      <div class="form-group">
+          <label for="nameInput">Your Name</label>
+          <input type="name" class="form-control" id="nameInput" placeholder="Please enter your full name">
+      </div>
+      
+      <hr>
+
+      <div class="form-group">
+        <label for="emailInput">Your Email Address</label>
+        <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="example@illinois.edu">
+        <small id="emailHelp" class="form-text text-muted">This will become your future login credential.</small>
+      </div>
+
+      <div class="form-group">
+        <label for="passwordInput">Password</label>
+        <input type="password" class="form-control" id="passwordInput" aria-describedby="passwordHelp" placeholder="Your password here">
+        <small id="passwordHelp" class="form-text text-muted">Think twice - you cannot recover your password.</small>
+      </div>
+
+      <hr>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+  </main>
 
 {% endblock %}
