--- a/templates/login.html
+++ b/templates/login.html
@@ -4,22 +4,12 @@
 <main role="main" class="inner cover">
     <h1 class="cover-heading">Log In</h1>
     <hr>
-    
-    <form>
 
-      <div class="form-group">
-        <label for="emailInput">Your Email Address</label>
-        <input type="email" class="form-control" id="emailInput" placeholder="example@illinois.edu">
-      </div>
-
-      <div class="form-group">
-        <label for="passwordInput">Password</label>
-        <input type="password" class="form-control" id="passwordInput" placeholder="Your password here">
-      </div>
-
-      <hr>
-
-      <button type="submit" class="btn btn-primary">Login</button>
+    <form method="post" action="/login"  id="db_post" name="db_post">
+        {{ form.hidden_tag() }}
+        {{ macros.render_field(form.email, placeholder='example@illinois.edu', type='email', label_visible=true) }}
+        {{ macros.render_field(form.password, placeholder='Your password here', type='password', label_visible=true) }}
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 
   </main>
