--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -1,22 +1,13 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
+{% set nav_tabs = [("Home", "/dashboard/student/courses"), ("Profile", "/dashboard/student/profile"), ("Log out", "/logout")] %}
+{% set active_tab = "Home" %}
 {% block content %}
-
-<form action="/logout" method="post">
-    <button type="submit" style="float: right;">Log Out</button>
-</form>
 
 <div class="col-md-4 col-md-offset-4">
 
       <div align="center">
         <h2>Student Dashboard for {{current_user.name}}</h2>
       </div>
-
-<hr>
-
-<form action="/update" method="get">
-    <button type="submit" class="btn btn-primary">Change personal information</button></p></div>
-</form>
-
 
 <hr>
 
