Update frontend for student pages

--- a/templates/instructor_course_dashboard.html
+++ b/templates/instructor_course_dashboard.html
@@ -56,12 +56,12 @@ $(document).ready(function(){
     </table>
 </main>
 
-<div align="center">
+<!--<div align="center">-->
 
 
 		<!--<form>-->
         <!--<button type="submit" formaction="/dashboard/instructor/course/question/{{course_CRN}}" formmethod="get"> Questions </button>-->
     <!--</form>-->
-</div>
+<!--</div>-->
 
 {% endblock %}
