--- a/templates/student_question_page.html
+++ b/templates/student_question_page.html
@@ -1,41 +1,27 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
+{% set nav_tabs = [("Home", "/dashboard/student/courses"), ("Profile", "/dashboard/student/profile"), ("Log out", "/logout")] %}
+{% set active_tab = "Home" %}
 {% block content %}
 
 <style>
-
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+textarea {
+    border-radius: 10px;
+    outline: none;
+    padding: 10px;
+    font-family: monospace;
 }
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-
 </style>
 
-
-<form action="/logout" method="post">
-    <button type="submit" style="float: right;">Log Out</button>
-</form>
-
-<div class="col-md-4 col-md-offset-4">
-
-      <div align="center">
+<main role="main" class="inner cover">
+    <h2 class="cover-heading">Question</h2>
         {% if question is none %}
           <p>No question at this moment :)</p>
         {% else %}
-          <p>{{question}}</p>
+          <div style="margin:20; word-wrap: break-word;">
+              <p style="margin-left:10">{{question}}</p>
+              <textarea rows="10" cols="50"></textarea>
+          </div>
         {% endif %}
-      </div>
-
-<br>
-
-</div>
+</main>
 
 {% endblock %}
