--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,23 @@
 {% block content %}
 
 <main role="main" class="inner cover">
+
   <h1 class="cover-heading">Getting involved in class.</h1>
-  <p class="lead">Peer Learning is a web application that allows students to pair up with other users in the same class and collaboratively tackle problems posted by the instructor.</p>
+
+  <p class="lead">Peer Learning is a web application that allows students to pair up with other users in the same class
+    and collaboratively tackle problems posted by the instructor.</p>
+
   <div class="row top-buffer"></div>
   <p class="lead">
     <a href="signup" class="btn btn-lg btn-secondary">Sign Up</a>
   </p>
+
   <p class="lead">
-        <small> 
-            Already have an account? <a href="login">Log in</a> here.
-            </small>
-      </p>
+    <small>
+      Already have an account? <a href="login">Log in</a> here.
+    </small>
+  </p>
+  
 </main>
 
 {% endblock %}
