--- a/templates/query_analysis.html
+++ b/templates/query_analysis.html
@@ -10,7 +10,7 @@ table {
   font-family: monospace;
   border-collapse: collapse;
   width: 100%;
-  background-color: #c6cbcb;
+  background-color: #52666f;
 }
 
 
@@ -21,11 +21,11 @@ td, th {
 }
 
 th {
-  background-color: #8cbdb4;
+  background-color: #344b4e;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #678494;
 }
 
 h4 {
@@ -35,7 +35,7 @@ h4 {
 
 .block {
   border-radius: 20px;
-  background-color: #c1ddde;
+  background-color: #6b8f90;
   width:500;
   margin:auto;
   padding:10px;
