Add frontend for search course.

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <h3 class="masthead-brand">Peer Learning</h3>
             <nav class="nav nav-masthead justify-content-center">
               {% if nav_tabs is not defined %}
-                <a class="nav-link active" href="index">Home</a>
+                <a class="nav-link active" href="/index">Home</a>
               {% else %}
                 {% for text, href in nav_tabs %}
                   {% if active_tab == text %}
