--- a/templates/student_registered_courses.html
+++ b/templates/student_registered_courses.html
@@ -44,7 +44,7 @@ td, th {
         </tbody>
     </table>
     <br>
-
+    <button class="btn btn-primary" onclick="location.href = '/dashboard/student/add-course';">Add another course</button>
 </main>
 
 {% endblock %}
