--- a/templates/instructor_dashboard.html
+++ b/templates/instructor_dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
-{% set nav_tabs = [("Home", "/dashboard/instructor/courses"), ("Profile", "/dashboard/instructor/profile"), ("Log out", "/logout")] %}
+{% set nav_tabs = [("Home", "/dashboard/instructor/courses"), ("Profile", "/dashboard/instructor/profile"), ("Sign Out", "/logout")] %}
 {% set active_tab = "Home" %}
 {% block content %}
 
@@ -35,25 +35,26 @@ $(document).ready(function(){
 });
 </script>
 
+<div class="container-fluid">
 
-<div class="col-md-4 col-md-offset-4">
-
-      <div align="center">
-        <h2>Hello {{current_user.name}}!</h2>
-      </div>
+  <h1 class="cover-heading">Welcome back, {{current_user.name}}!</h1>
 
 <br>
+<br>
 
-<h4>Courses</h4>
-    <table>
-    <tbody>
+<h3>Current courses:</h3>
+<br>
+<table class="table table-hover table-dark">
+  <thead>
     <tr>
-        <td>CRN</td>
-        <td>title</td>
-        <td>year</td>
-        <td>term</td>
+      <th scope="col">CRN</th>
+      <th scope="col">Title</th>
+      <th scope="col">Year</th>
+      <th scope="col">Term</th>
     </tr>
-      {% for c in courses %}
+  </thead>
+  <tbody>
+    {% for c in courses %}
         <tr>
           <td>{{ c.CRN }}</td>
             <td><a href="/dashboard/instructor/course/{{c.CRN}}">{{ c.title }}</a></td>
@@ -61,10 +62,12 @@ $(document).ready(function(){
           <td>{{ c.term }}</td>
         </tr>
       {% endfor %}
-    </tbody>
-    </table>
+  </tbody>
+</table>
+
+
 <br>
-<button id="AddCourseBtn" class="btn btn-primary">Add Course</button>
+<button id="AddCourseBtn" class="btn btn-info">Add Course</button>
 <form id="AddCourseForm" action="/dashboard/instructor/courses" method="post">
     {{ add_course_form.hidden_tag() }}
     {{ macros.render_field(add_course_form.CRN, placeholder='24521', label_visible=true) }}
@@ -74,5 +77,4 @@ $(document).ready(function(){
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
 </div>
-
 {% endblock %}
