--- a/templates/instructor_dashboard.html
+++ b/templates/instructor_dashboard.html
@@ -3,19 +3,15 @@
 {% set active_tab = "Home" %}
 {% block content %}
 
+<!-- CSS -->
 <style>
 #AddCourseForm{
 	display: none;
-    width: 300px;
-    border: 1px solid #ccc;
-    padding: 14px;
-    background: #ececec;
-}
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+    width: 100%;
+    height: 50%;
+    border: 0px solid #fff;
+    padding: 5px;
+    background: #333;
 }
 
 td, th {
@@ -23,10 +19,9 @@ td, th {
   text-align: left;
   padding: 8px;
 }
-
-
 </style>
 
+<!-- script -->
 <script>
 $(document).ready(function(){
 	$('#AddCourseBtn').click(function(){
@@ -35,46 +30,52 @@ $(document).ready(function(){
 });
 </script>
 
-<div class="container-fluid">
+<!-- content -->
+<main role="main">
 
-  <h1 class="cover-heading">Welcome back, {{current_user.name}}!</h1>
+    <div class="container-fluid">
 
-<br>
-<br>
+      <h1 class="cover-heading">Instructor Panel</h1>
+      <br>
+      <br>
 
-<h3>Current courses:</h3>
-<br>
-<table class="table table-hover table-dark">
-  <thead>
-    <tr>
-      <th scope="col">CRN</th>
-      <th scope="col">Title</th>
-      <th scope="col">Year</th>
-      <th scope="col">Term</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for c in courses %}
-        <tr>
-          <td>{{ c.CRN }}</td>
-            <td><a href="/dashboard/instructor/course/{{c.CRN}}">{{ c.title }}</a></td>
-          <td>{{ c.year }}</td>
-          <td>{{ c.term }}</td>
-        </tr>
-      {% endfor %}
-  </tbody>
-</table>
+      <h3>Welcome back, {{current_user.name}}!</h3>
+      <h3>Your current course(s):</h3>
+      <br>
+      <table class="table table-hover table-dark">
+        <thead>
+          <tr>
+            <th scope="col">CRN</th>
+            <th scope="col">Title</th>
+            <th scope="col">Year</th>
+            <th scope="col">Term</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for c in courses %}
+              <tr>
+                <td>{{ c.CRN }}</td>
+                  <td><a href="/dashboard/instructor/course/{{c.CRN}}">{{ c.title }}</a></td>
+                <td>{{ c.year }}</td>
+                <td>{{ c.term }}</td>
+              </tr>
+            {% endfor %}
+        </tbody>
+      </table>
+      
+      <br>
+      <button id="AddCourseBtn" class="btn btn-info">Add Course</button>
+      <br>
+      <form id="AddCourseForm" action="/dashboard/instructor/courses" method="post">
+          {{ add_course_form.hidden_tag() }}
+          {{ macros.render_field(add_course_form.CRN, placeholder='24521', label_visible=true) }}
+          {{ macros.render_field(add_course_form.title, placeholder='CS 411', label_visible=true) }}
+          {{ macros.render_field(add_course_form.year, placeholder='2019', label_visible=true) }}
+          {{ macros.render_field(add_course_form.term, placeholder='spring', label_visible=true) }}
+          <button type="submit" class="btn btn-info">Submit</button>
+      </form>
+      </div>
 
+</main>
 
-<br>
-<button id="AddCourseBtn" class="btn btn-info">Add Course</button>
-<form id="AddCourseForm" action="/dashboard/instructor/courses" method="post">
-    {{ add_course_form.hidden_tag() }}
-    {{ macros.render_field(add_course_form.CRN, placeholder='24521', label_visible=true) }}
-    {{ macros.render_field(add_course_form.title, placeholder='CS 411', label_visible=true) }}
-    {{ macros.render_field(add_course_form.year, placeholder='2019', label_visible=true) }}
-    {{ macros.render_field(add_course_form.term, placeholder='spring', label_visible=true) }}
-    <button type="submit" class="btn btn-default">Submit</button>
-</form>
-</div>
 {% endblock %}
