--- a/templates/student_registered_courses.html
+++ b/templates/student_registered_courses.html
@@ -21,30 +21,48 @@ td, th {
 
 </style>
 
-<main role="main" class="inner cover">
-    <h2 class="cover-heading" style="float:left">Registered Courses</h2>
-    <table>
-        <tbody>
-        <tr>
-            <td>CRN</td>
-            <td>title</td>
-            <td>year</td>
-            <td>term</td>
-            <td>instructor</td>
-        </tr>
-        {% for c in courses %}
-        <tr>
-            <td>{{ c.CRN }}</td>
-            <td><a href="/dashboard/student/course/{{c.CRN}}">{{ c.title }}</a></td>
-            <td>{{ c.year }}</td>
-            <td>{{ c.term }}</td>
-            <td>{{ c.instructor }}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <br>
-    <button class="btn btn-primary" onclick="location.href = '/dashboard/student/add-course';">Add another course</button>
-</main>
+<main role="main">
 
+    <div class="container-fluid">
+
+      <h1 class="cover-heading">Student Panel</h1>
+      <br>
+      <br>
+
+      <h3>Welcome back, {{current_user.name}}.</h3>
+      <h3>Your current course(s):</h3>
+      <br>
+      <table class="table table-hover table-dark">
+        <thead>
+          <tr>
+            <th scope="col">CRN</th>
+            <th scope="col">Title</th>
+            <th scope="col">Year</th>
+            <th scope="col">Term</th>
+            <th scope="col">Instructor</th>
+  
+          </tr>
+        </thead>
+        <tbody>
+          {% for c in courses %}
+              <tr>
+                <td>{{ c.CRN }}</td>
+                  <td><a href="/dashboard/student/course/{{c.CRN}}">{{ c.title }}</a></td>
+                <td>{{ c.year }}</td>
+                <td>{{ c.term }}</td>
+                <td>{{ c.instructor }}</td>
+              </tr>
+            {% endfor %}
+        </tbody>
+      </table>
+      
+      
+      <br>
+      <button class="btn btn-primary" onclick="location.href = '/dashboard/student/add-course';">Add another course</button>
+  
+      </div>
+
+</main>
+  
+  
 {% endblock %}
